--- a/spec/out_W.yml
+++ b/spec/out_W.yml
@@ -1,18 +1,26 @@
 # encoding: UTF-8
-a_one: José   # Comentado   
-b_two:
+a_one: José   # Comentado
+b_(two)²:
   a_1: Joãozinho
   b_two: |
     Nos somos legais, como
-    por exemplo: João, 
+    por exemplo: João,
     que: gosta de nos dar milhões
     em dinheiro todos os dias.
-    
-    Linhas em Branco com tabulação 
+
+    Linhas em Branco com tabulação
     nos strings devem ser preservadas.
-    
+
   c_three:
       a: "Marcelo"
+  d_four: "Somos chatos
+    gostamos de várias linhas\"
+    e ainda usamos escaping
+    para fuder"
+  e_five: Prefirimos strings sem
+    nenhum tipo de especificação.
+  f_six: Dalton
+  g_se/ ven:
       "b": Bernardo
       c_3:
           klass: Lucas
@@ -20,13 +28,6 @@ b_two:
       d_4: Rafael
       # Comentário de muitas
       # linhas (goes with d_4)
-  d_four: "Somos chatos
-    gostamos de várias linhas\"
-    e ainda usamos escaping 
-    para fuder"
-  e_five: Prefirimos strings sem
-    nenhum tipo de especificação.
-  f_six: Dalton
 c_three: Gustavo
 # Comentário (goes with c_three)
 d_four: Oliveira
